--- a/Frontend/locale/ar/ar.json
+++ b/Frontend/locale/ar/ar.json
@@ -67,5 +67,28 @@
   "Create Staff": "إنشاء موظف",
   "Temporary password": "كلمة مرور مؤقتة",
   "Group": "مجموعة",
-  "Save": "حفظ"
+  "Save": "حفظ",
+  "View more": "عرض المزيد",
+  "ACTIVE": "نشط",
+  "PENDING": "قيد الانتظار",
+  "SCHEDULED": "مجدول",
+  "DEACTIVE": "غير نشط",
+  "REJECTED": "مرفوض",
+  "CANCELLED": "ملغى",
+  "EXPIRED": "منتهي الصلاحية",
+  "DRAFT": "مسودة",
+  "PAID": "مدفوع",
+  "OPEN": "OPEN",
+  "Edit": "يحرر",
+  "Download Invoice": "تنزيل الفاتورة",
+  "Select type": "اختر النوع",
+  "Select Role": "تحديد الدور",
+  "Add a new staff": "إضافة موظف جديد",
+  "Price": "السعر",
+  "Description": "الوصف",
+  "Invoice": "فاتورة",
+  "Select Client": "تحديد العميل",
+  "Client List": "قائمة العملاء",
+  "Add New Client": "إضافة عميل جديد",
+  "Total number of client": "إجمالي عدد العملاء"
 }
